* fixed coingecko issue with too much polling * add liquidity cap msg

--- a/assets/styles/pool.css
+++ b/assets/styles/pool.css
@@ -428,6 +428,7 @@ input[type='submit'][disabled] {
 }
 
 @media screen and (max-height: 460px) {
+  .liquidity-cap { display: none; }
   .odds-box { display: none; }
   .pane-title { display: none; }
 }
